vlib/v/checker/tests/reference_fixed_array_alias_err.vv
type Array = [8]int

fn main() {
	a := Array{}
	n := &a[0]
	println(n)
}
